--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,8 +4,9 @@
     <title>Spring Security Example</title>
 </head>
 <body>
-<h1>Welcome to Index PAGE!</h1>
+<h1>Hello, it's wellcome page! Please, log in.</h1>
 
+<a href="/login"><button type="button">Войти</button></a>
 
 </body>
 </html>
