--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
+<a href="/logout"><button type="button">Выйти</button></a>
+<br />
 <div>
     <table>
         <tr>
