--- a/src/main/resources/templates/edit-user.html
+++ b/src/main/resources/templates/edit-user.html
@@ -5,19 +5,36 @@
     <title>Edit User</title>
 </head>
 <body>
-
+<a href="/logout"><button type="button">Выйти</button></a>
+<br />
 <form th:method="PATCH" th:action="@{/admin/edit(id=${user.getId()})}" th:object="${user}">
-    <label for="first_name">Имя: </label>
+    <label for="username">Username: </label>
+    <input required type="text" th:field="*{username}" id="username"/>
+    <br />
+    <label for="password">Password: </label>
+    <input required type="text" th:field="*{password}" id="password"/>
+    <br />
+    <label for="new_password">New Password: </label>
+    <input type="text" th:field="*{newPassword}" id="new_password"/>
+    <br />
+    <label for="first_name">First Name: </label>
     <input type="text" th:field="*{firstName}" id="first_name"/>
-    <br/>
-    <label for="last_name">Surname:</label>
+    <br />
+    <label for="last_name">Last Name:</label>
     <input type="text" th:field="*{lastName}" id="last_name"/>
-    <br/>
+    <br />
     <label for="age">Age:</label>
     <input type="text" th:field="*{age}" id="age"/>
     <p th:if="${#fields.hasErrors('age')}">Invalid Age</p>
-    <br/>
-    <br/>
+    <br />
+    <label>Roles:
+        <select size="2" multiple name="roles" >
+            <option selected="selected" value="1">USER</option>
+            <option value="2">ADMIN</option>
+        </select>
+    </label>
+    <br />
+    <br />
     <input type="submit" value="EDIT USER"/>
 </form>
 
