--- a/src/main/resources/templates/edit-user.html
+++ b/src/main/resources/templates/edit-user.html
@@ -28,7 +28,7 @@
     <p th:if="${#fields.hasErrors('age')}">Invalid Age</p>
     <br />
     <label>Roles:
-        <select size="2" multiple name="abc" >
+        <select size="2" multiple name="roles" >
             <option selected="selected" value="1">USER</option>
             <option value="2">ADMIN</option>
         </select>
