--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,34 +1,80 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Spring Security Example</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+
+    <title>Title</title>
+
+    <style>
+        #logout {
+            color: #ddd;
+        }
+    </style>
 </head>
 <body>
-<a href="/logout"><button type="button">Выйти</button></a>
-<br />
-<div th:object="${user}">
-    <h1>
-        <span th:text="${user.getUsername()}"></span>, welcome to your info page!
-    </h1>
-</div>
+    <header>
+        <nav class="navbar navbar-dark bg-dark">
+            <div class="container-fluid">
+                <div class="navbar-brand">
+                    <b th:text="${user.getUsername()}"></b> with roles: <span th:text="${user.concatRoles()}"></span>
+                </div>
+                <div class="ml-auto navbar-text">
+                    <a id="logout" href="/logout">Logout</a>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <div class="container-fluid">
+            <div class="row vh-100">
+                <div class="col-2 pt-4 px-0">
+                    <ul class="nav nav-pills flex-column">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="/user">User</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-10 pt-4 ps-4 bg-light">
+                    <h1>User information-page</h1>
+                        <div class="card">
+                            <h5 class="card-header py-3">About user</h5>
+                            <div class="card-body">
+                                <div class="table-responsive">
+                                    <table class="table table-striped table-hover align-middle">
+                                        <thead>
+                                            <tr>
+                                                <th scope="col">ID</th>
+                                                <th scope="col">First Name</th>
+                                                <th scope="col">Last Name</th>
+                                                <th scope="col">Age</th>
+                                                <th scope="col">Username</th>
+                                                <th scope="col">Role</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <th scope="row" th:text="${user.getId()}"></th>
+                                                <td th:text="${user.getFirstName()}"></td>
+                                                <td th:text="${user.getLastName()}"></td>
+                                                <td th:text="${user.getAge()}"></td>
+                                                <td th:text="${user.getUsername()}"></td>
+                                                <td th:text="${user.concatRoles()}"></td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 
-<div th:object="${user}">
-    <h3>
-        Username: <span th:text="${user.getUsername()}"></span>
-    </h3>
-    <br />
-    <h3>
-        First Name: <span th:text="${user.getFirstName()}"></span>
-    </h3>
-    <br />
-    <h3>
-        Last Name: <span th:text="${user.getLastName()}"></span>
-    </h3>
-    <br />
-    <h3>
-        Age: <span th:text="${user.getAge()}"></span>
-    </h3>
-</div>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
+
