--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -107,7 +107,7 @@
                                                                                 </div>
                                                                                 <div class="form-group mb-3">
                                                                                     <label class="form-label fw-bold" for="age">Age</label>
-                                                                                    <input class="form-control" type="text" id="age" name="age" th:value="${user.age}"/>
+                                                                                    <input class="form-control" type="number" id="age" name="age" th:value="${user.age}" min="1" max="200" step="1"/>
                                                                                 </div>
                                                                                 <div class="form-group mb-3">
                                                                                     <label class="form-label fw-bold" for="username">Username</label>
@@ -216,7 +216,7 @@
                                         </div>
                                         <div class="form-group mb-3">
                                             <label class="form-label fw-bold" for="new_age">Age</label>
-                                            <input class="form-control" type="text" id="new_age" name="age"/>
+                                            <input class="form-control" type="number" id="new_age" name="age" min="1" max="200" step="1"/>
                                         </div>
                                         <div class="form-group mb-3">
                                             <label class="form-label fw-bold" for="new_username">Username</label>
