--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -18,9 +18,7 @@
     <header>
         <nav class="navbar navbar-dark bg-dark">
             <div class="container-fluid">
-                <div class="navbar-brand">
-                    <b th:text="${user.getUsername()}"></b> with roles: <span th:text="${user.concatRoles()}"></span>
-                </div>
+                <div id="user-details" class="navbar-brand"></div>
                 <div class="ml-auto navbar-text">
                     <a id="logout" href="/logout">Logout</a>
                 </div>
@@ -33,39 +31,29 @@
                 <div class="col-2 pt-4 px-0">
                     <ul class="nav nav-pills flex-column">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/user">User</a>
+                            <a class="nav-link active" aria-current="page">User</a>
                         </li>
                     </ul>
                 </div>
                 <div class="col-10 pt-4 ps-4 bg-light">
                     <h1>User information-page</h1>
-                        <div class="card">
-                            <h5 class="card-header py-3">About user</h5>
-                            <div class="card-body">
-                                <div class="table-responsive">
-                                    <table class="table table-striped table-hover align-middle">
-                                        <thead>
-                                            <tr>
-                                                <th scope="col">ID</th>
-                                                <th scope="col">First Name</th>
-                                                <th scope="col">Last Name</th>
-                                                <th scope="col">Age</th>
-                                                <th scope="col">Username</th>
-                                                <th scope="col">Role</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            <tr>
-                                                <th scope="row" th:text="${user.getId()}"></th>
-                                                <td th:text="${user.getFirstName()}"></td>
-                                                <td th:text="${user.getLastName()}"></td>
-                                                <td th:text="${user.getAge()}"></td>
-                                                <td th:text="${user.getUsername()}"></td>
-                                                <td th:text="${user.concatRoles()}"></td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
+                    <div class="card">
+                        <h5 class="card-header py-3">About user</h5>
+                        <div class="card-body">
+                            <div class="table-responsive">
+                                <table class="table table-striped table-hover align-middle">
+                                    <thead>
+                                        <tr>
+                                            <th scope="col">ID</th>
+                                            <th scope="col">First Name</th>
+                                            <th scope="col">Last Name</th>
+                                            <th scope="col">Age</th>
+                                            <th scope="col">Username</th>
+                                            <th scope="col">Role</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody id="table-info-body"></tbody>
+                                </table>
                             </div>
                         </div>
                     </div>
@@ -75,6 +63,7 @@
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <script src="/user.js"></script>
 </body>
 </html>
 
